--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "js-yaml": "^4.1.0"
+    "unity-yaml-parser": "^0.1.7"
   },
   "keywords": [
     "unity",
